feat: Enhance ticket management functionality
- Added functionality to close tickets in the admin panel, including confirmation dialogs and state checks.
- Updated button states based on the selected ticket's status to improve user experience.
- Modified the ticket approval process to ensure only tickets in 'PENDING' state can be approved or rejected.
- Implemented mandatory observation field for adding items to the cart in the admin ticket panel.
- Adjusted the validation message for returning loans to reflect the correct status.